--- a/package.json
+++ b/package.json
@@ -1,12 +1,1 @@
-{
-  "name": "blockhain",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
-}
+{"name":"blockchain","version":"1.0.0","description":"","scripts":{"start":"node main.js"},"dependencies":{"body-parser":"^1.15.2","crypto-js":"^4.2.0","express":"^4.19.2","ws":"^1.1.0"},"engines":{"node":">=4.3.2"}}
